--- a/src/main/resources/css/Main.css
+++ b/src/main/resources/css/Main.css
@@ -42,3 +42,20 @@
 .pixel-button:pressed {
     -fx-background-color: #808080;
 }
+
+.labeld {
+    -fx-font-family: "Retro Gaming";
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #000000;
+}
+
+.txtField {
+    -fx-min-width: 250px;
+    -fx-font-family: "Retro Gaming";
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-border-color: #000000;
+    -fx-border-width: 2px;
+    -fx-text-fill: #000000;
+}
