--- a/src/main/resources/css/Main.css
+++ b/src/main/resources/css/Main.css
@@ -50,6 +50,13 @@
     -fx-text-fill: #000000;
 }
 
+.label-save {
+    -fx-font-family: "Retro Gaming";
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-text-fill: green;
+}
+
 .txtField {
     -fx-min-width: 250px;
     -fx-font-family: "Retro Gaming";
@@ -57,5 +64,28 @@
     -fx-font-weight: bold;
     -fx-border-color: #000000;
     -fx-border-width: 2px;
+    -fx-text-fill: #000000;
+}
+
+.progressBar {
+    -fx-min-width: 250px;
+    -fx-font-family: "Retro Gaming";
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-border-color: #000000;
+    -fx-border-width: 2px;
+    -fx-text-fill: #000000;
+}
+
+.vboxLoading {
+    -fx-alignment: center;
+    -fx-spacing: 10px;
+    -fx-layout-x: 50%;
+}
+
+.loadingLabel {
+    -fx-font-family: "Retro Gaming";
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
     -fx-text-fill: #000000;
 }
