Finish loading, player and start game ui

--- a/src/main/resources/css/Main.css
+++ b/src/main/resources/css/Main.css
@@ -89,3 +89,9 @@
     -fx-font-weight: bold;
     -fx-text-fill: #000000;
 }
+
+.vboxPlayer {
+    -fx-alignment: center;
+    -fx-spacing: 10px;
+    -fx-layout-x: 50%;
+}
