--- a/src/main/resources/css/Game.css
+++ b/src/main/resources/css/Game.css
@@ -7,7 +7,7 @@
     -fx-font-family: "Pixel Operator 8";
     -fx-font-size: 25px;
     -fx-font-weight: bold;
-    -fx-text-fill: #000000;
+    -fx-text-fill: #f8f1e7;
     -fx-alignment: center;
 
 }
@@ -29,5 +29,12 @@
 }
 
 .hBoxPlayerStats {
+    -fx-spacing: 10px;
+}
+
+.playerLabelValue {
+    -fx-font-family: "Pixel Operator 8";
+    -fx-font-size: 12px;
+    -fx-text-fill: #000000;
     -fx-spacing: 10px;
 }
