--- a/src/main/resources/css/Game.css
+++ b/src/main/resources/css/Game.css
@@ -3,6 +3,11 @@
     -fx-background-size: cover;
 }
 
+.window {
+    -fx-background-image: url("../img/game_bg/game_bg1.jpeg");
+    -fx-background-size: cover;
+}
+
 .playerLabelTitle {
     -fx-font-family: "Pixel Operator 8";
     -fx-font-size: 25px;
@@ -12,29 +17,8 @@
 
 }
 
-.playerStatValue {
-    -fx-font-family: "Retro Gaming";
-    -fx-font-size: 15px;
-    -fx-font-weight: bold;
-    -fx-text-fill: #000000;
-    -fx-spacing: 10px;
-}
-
-.playerStatLabelValue {
-    -fx-font-family: "Retro Gaming";
-    -fx-font-size: 15px;
-    -fx-font-weight: bold;
-    -fx-text-fill: #000000;
-    -fx-spacing: 10px;
-}
-
-.hBoxPlayerStats {
-    -fx-spacing: 10px;
-}
-
 .playerLabelValue {
     -fx-font-family: "Pixel Operator 8";
     -fx-font-size: 12px;
     -fx-text-fill: #000000;
-    -fx-spacing: 10px;
 }
