--- a/src/main/resources/fxml/Game.fxml
+++ b/src/main/resources/fxml/Game.fxml
@@ -8,7 +8,7 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.stmarygate.cassandra.application.controllers.GameController"
-            prefWidth="1060" prefHeight="600">
+            prefWidth="1060" prefHeight="600" styleClass="window">
 
     <stylesheets>
         <URL value="@../css/Game.css"/>
@@ -21,20 +21,20 @@
         <Label fx:id="playerName" styleClass="playerLabelTitle" alignment="CENTER" textAlignment="CENTER"
                layoutY="30" prefWidth="437"/>
 
-        <VBox prefWidth="417" styleClass="hBoxPlayerStats" layoutY="120" layoutX="-40" >
-            <HBox alignment="CENTER" spacing="5">
+        <VBox prefWidth="417" layoutY="120" layoutX="40" spacing="5">
+            <HBox alignment="BASELINE_LEFT" spacing="5">
                 <HBox alignment="CENTER" spacing="5">
                     <ImageView fx:id="heartImage" fitHeight="25" fitWidth="25"/>
                     <ImageView fx:id="healthBar"/>
+                    <Label fx:id="playerLives" alignment="BASELINE_LEFT" styleClass="playerLabelValue"/>
                 </HBox>
-                <Label fx:id="playerLives" styleClass="playerLabelValue"/>
             </HBox>
-            <HBox alignment="CENTER" spacing="5">
+            <HBox alignment="BASELINE_LEFT" spacing="5">
                 <HBox alignment="CENTER" spacing="5">
                     <ImageView fx:id="starImage" fitHeight="25" fitWidth="25"/>
                     <ImageView fx:id="starBar"/>
+                    <Label fx:id="playerExps" alignment="TOP_LEFT" styleClass="playerLabelValue"/>
                 </HBox>
-                <Label fx:id="playerExps" styleClass="playerLabelValue"/>
             </HBox>
         </VBox>
     </Pane>
