--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -13,8 +13,8 @@
            textAlignment="CENTER" layoutX="240" layoutY="80"/>
     <VBox alignment="CENTER" spacing="10" prefWidth="1060" prefHeight="600">
 
-        <Button text="Jouer" styleClass="pixel-button" onMouseClicked="#handlePlayBtn" />
-        <Button text="Réglages" styleClass="pixel-button" onMouseClicked="#handleSettingsBtn" />
+        <Button fx:id="btn_play" styleClass="pixel-button" onMouseClicked="#handlePlayBtn" />
+        <Button fx:id="btn_settings" styleClass="pixel-button" onMouseClicked="#handleSettingsBtn" />
     </VBox>
     <Button text="Quitter" styleClass="pixel-button-leave" layoutX="10"
             layoutY="550"
