--- a/src/main/resources/fxml/Settings.fxml
+++ b/src/main/resources/fxml/Settings.fxml
@@ -17,26 +17,31 @@
     <Label text="Saint Mary's Gate" styleClass="titleGame" alignment="CENTER"
            textAlignment="CENTER" layoutX="240" layoutY="80"/>
 
-    <VBox alignment="CENTER" spacing="10" prefWidth="1060" prefHeight="600">
+    <VBox alignment="CENTER" spacing="10" prefWidth="1060" prefHeight="600" layoutY="50">
         <HBox alignment="CENTER" spacing="10">
-            <Label text="Server URL" styleClass="labeld" />
+            <Label fx:id="label_language" styleClass="labeld" />
+            <TextField fx:id="language" styleClass="txtField" />
+        </HBox>
+        <HBox alignment="CENTER" spacing="10">
+            <Label fx:id="label_server_url" styleClass="labeld" />
             <TextField fx:id="serverUrl" styleClass="txtField" />
         </HBox>
         <HBox alignment="CENTER" spacing="10">
-            <Label text="Server Port" styleClass="labeld" />
+            <Label fx:id="label_server_port" styleClass="labeld" />
             <TextField fx:id="serverPort" styleClass="txtField" />
         </HBox>
         <HBox alignment="CENTER" spacing="10">
-            <Label text="Username" styleClass="labeld" />
+            <Label fx:id="label_username" styleClass="labeld" />
             <TextField fx:id="username" styleClass="txtField" />
         </HBox>
         <HBox alignment="CENTER" spacing="10">
-            <Label text="Password" styleClass="labeld" />
+            <Label fx:id="label_password" styleClass="labeld" />
             <PasswordField fx:id="password" styleClass="txtField" />
         </HBox>
-        <Button text="Save" styleClass="pixel-button" onMouseClicked="#handleSaveBtn" />
+        <Button fx:id="label_save" styleClass="pixel-button" onMouseClicked="#handleSaveBtn" />
         <Label fx:id="savedLabel" styleClass="labeld" visible="false" />
     </VBox>
 
-    <Button text="Cancel" styleClass="pixel-button-leave" layoutX="10" layoutY="550" onMouseClicked="#handleCancelBtn" />
+    <Button fx:id="label_cancel" styleClass="pixel-button-leave" layoutX="10" layoutY="550"
+    onMouseClicked="#handleCancelBtn" />
 </AnchorPane>
