--- a/src/main/resources/fxml/LoadingGame.fxml
+++ b/src/main/resources/fxml/LoadingGame.fxml
@@ -10,7 +10,7 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             prefWidth="1060" prefHeight="600"
-            fx:controller="com.stmarygate.cassandra.application.controllers.GameLoadingGameController">
+            fx:controller="com.stmarygate.cassandra.application.controllers.LoadingGameController">
     <stylesheets>
         <URL value="@../css/Main.css"/>
     </stylesheets>
