--- a/src/main/resources/fxml/Settings.fxml
+++ b/src/main/resources/fxml/Settings.fxml
@@ -9,7 +9,7 @@
 <?import java.net.URL?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.stmarygate.cassandra.application.controllers.GameSettingsController"
+            fx:controller="com.stmarygate.cassandra.application.controllers.SettingsController"
             prefHeight="600" prefWidth="1060">
     <stylesheets>
         <URL value="@../css/Main.css" />
